--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -18,7 +18,7 @@
   padding-left: 16px;
   padding-right: 16px;
   margin-top: 2px;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 .button {
@@ -35,6 +35,7 @@
   background-color: rgba(112, 76, 182, 0.1);
   border-radius: 2px;
   transition: all 0.15s;
+  font-weight: bold;
 }
 
 .textbox {
@@ -60,8 +61,8 @@
 }
 
 .asyncButton:after {
-  content: '';
-  background-color: rgba(112, 76, 182, 0.15);
+  content: "";
+  background-color: rgba(182, 76, 81, 0.15);
   display: block;
   position: absolute;
   width: 100%;
