--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
+/* ------------------ Css starter ----------------------- */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+/* ------------------ Css starter ----------------------- */
+
+@font-face {
+  font-family: "BarlowSemiCondensed";
+  src: local("BarlowSemiCondensed"),
+    url(./assets/fonts/Barlow_Semi_Condensed/BarlowSemiCondensed-Regular.ttf)
+      format("truetype");
+}
+
+@font-face {
+  font-family: "BarlowSemiCondensed";
+  font-weight: bold;
+  src: local("BarlowSemiCondensed"),
+    url(./assets/fonts/Barlow_Semi_Condensed//BarlowSemiCondensed-Bold.ttf)
+      format("truetype");
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "BarlowSemiCondensed", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  --Dark_Text: hsl(229, 25%, 31%);
+  --Score_Text: hsl(229, 64%, 46%);
+  --Header_Outline: hsl(217, 16%, 45%);
 }
